--- a/src/main/webapp/transfertArgent.xhtml
+++ b/src/main/webapp/transfertArgent.xhtml
@@ -2,7 +2,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <body>
@@ -14,43 +13,33 @@
             </ui:define>
 
             <ui:define name="content">
-                <h:form>
-                    <table>
-                        <tr>
-                            <td>
-                                <h:outputLabel value="Compte bancaire source" for="idSource"/>
-                            </td>
-                            <td>
-                                <p:inputText id="idSource" value="#{transfertArgent.idSource}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h:outputLabel value="Compte bancaire destinataire" for="idDestinataire"/>
-                            </td>
-                            <td>
-                                <p:inputText id="idDestinataire" value="#{transfertArgent.idDestinataire}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <h:outputLabel value="Solde" for="solde"/>
-                            </td>
-                            <td>
-                                <p:inputText id="solde" value="#{transfertArgent.solde}"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>
-                                <p:commandButton value="Valider" action="#{transfertArgent.effectuerTransfert()}"/>
-                            </td>
-                        </tr>
-                    </table>
-                    <h:message for="idSource" style = "color:red"/>
-                    <h:message for="idDestinataire" style = "color:red"/>
-                    <h:message for="solde" style = "color:red"/>
+                <h:form id="form">
+                    <h:panelGrid columns="3">
+                        Id compte source : 
+                        <h:inputText id="source" size="3" value="#{transfertArgent.idSource}"
+                                     required="true"
+                                     requiredMessage="Source requis"
+                                     validator="compteBancaireValidator"
+                                     converterMessage="L'id est un nombre entier"/>
+                        <h:message for="source"/>
+                        Id compte déstinataire : 
+                        <h:inputText id="destinataire" size="3" value="#{transfertArgent.idDestinataire}"
+                                     required="true"
+                                     requiredMessage="Destinataire requis"
+                                     validator="compteBancaireValidator"
+                                     converterMessage="L'id est un nombre entier"/>
+                        <h:message for="destinataire"/>
+                        Montant à transferer : 
+                        <h:inputText id="montant" size="3" value="#{transfertArgent.montant}"
+                                     required="true"
+                                     requiredMessage="Montant requis"
+                                     converterMessage="Le montant est un nombre entier"/>
+                        <h:message for="montant"/>
+                    </h:panelGrid>
+                    <h:commandButton value="Valider" action="#{transfertArgent.effectuerTransfert()}"/>
                 </h:form>
+                <h:messages/>
+
             </ui:define>
 
         </ui:composition>
